--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "nodemon --watch server.ts --exec ts-node server.ts",
+    "start": "nodemon --exec ts-node server.ts",
     "build": "tsc"
   },
   "keywords": [],
@@ -18,7 +18,9 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
