--- a/apps/api/.gitignore
+++ b/apps/api/.gitignore
@@ -13,6 +13,10 @@ dist-ssr
 *.local
 .env
 
+# Uploads (keep .gitkeep)
+uploads/*
+!uploads/.gitkeep
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
