--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.7.7",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
@@ -30,6 +31,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
+    "multer": "^2.0.2",
     "zod": "^3.23.8"
   }
 }
