--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.7.7",
+    "@types/nodemailer": "^7.0.5",
     "@types/sharp": "^0.31.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
@@ -33,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "sharp": "^0.34.5",
     "zod": "^3.23.8"
   }
